--- a/docker/Dockerfile-artisan
+++ b/docker/Dockerfile-artisan
@@ -5,4 +5,4 @@ WORKDIR /var/www/html
 ADD https://raw.githubusercontent.com/mlocati/docker-php-extension-installer/master/install-php-extensions /usr/local/bin/
 
 RUN chmod uga+x /usr/local/bin/install-php-extensions && sync && \
-    install-php-extensions gd imagick
+    install-php-extensions gd imagick mysqli pdo_mysql
